Create Custom Navigation Bar - Add CustomNavBar - Add UIView+ Extension - Configure Gradient and Shadow for CustomNavBar

--- a/Spender/Base.lproj/Main.storyboard
+++ b/Spender/Base.lproj/Main.storyboard
@@ -15,14 +15,32 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nxe-Pp-2hj">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="220"/>
+                                <color key="backgroundColor" red="0.71596550550423388" green="0.80299793650405582" blue="0.61389330566909339" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="wlf-WX-iaS"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nxe-Pp-2hj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2zI-AX-MEH"/>
+                            <constraint firstItem="nxe-Pp-2hj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="8hH-VM-npB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nxe-Pp-2hj" secondAttribute="trailing" id="v3l-5W-0UO"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="dollarStackTabBar" id="QLi-RR-fEw"/>
+                    <navigationItem key="navigationItem" id="ZJS-H0-sfh"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="customNavBarView" destination="nxe-Pp-2hj" id="T7g-Sp-tVa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1202" y="-643"/>
+            <point key="canvasLocation" x="2130.7692307692305" y="-643.3649289099526"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="HIA-Zk-s8T">
@@ -35,7 +53,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="JtD-Kj-AOI"/>
+                        <segue destination="uli-N6-h6v" kind="relationship" relationship="viewControllers" id="JtD-Kj-AOI"/>
                         <segue destination="e2P-4Z-6p9" kind="relationship" relationship="viewControllers" id="DXW-Bu-oeA"/>
                         <segue destination="Qrc-DO-2ff" kind="presentation" identifier="presentAddItem" id="kI0-Fu-0B6"/>
                     </connections>
@@ -75,6 +93,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kgu-ga-2qr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1202" y="974"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="16V-kg-Nkj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uli-N6-h6v" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="dollarStackTabBar" id="QLi-RR-fEw"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oBO-ei-1El">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Zf4-EB-Pac"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="khH-Mg-I1B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1201.5384615384614" y="-643.3649289099526"/>
         </scene>
     </scenes>
     <resources>
