--- a/Spender/Base.lproj/Main.storyboard
+++ b/Spender/Base.lproj/Main.storyboard
@@ -216,7 +216,7 @@
                                             <action selector="showNextTimeline:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qdF-RO-WWC"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="September 2021" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="7UD-LO-X9b">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="March 2021" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="7UD-LO-X9b">
                                         <rect key="frame" x="70" y="0.0" width="210" height="55"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                         <nil key="textColor"/>
@@ -238,6 +238,10 @@
                                     <constraint firstItem="7UD-LO-X9b" firstAttribute="leading" secondItem="wrq-bx-ZjP" secondAttribute="trailing" constant="10" id="zBH-dm-H21"/>
                                 </constraints>
                             </view>
+                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ppl-lH-1fJ">
+                                <rect key="frame" x="0.0" y="305" width="390" height="456"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.96120663521277327" green="0.95656312489773576" blue="0.96585014552781079" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -247,7 +251,11 @@
                             <constraint firstItem="iVD-uA-iDk" firstAttribute="top" secondItem="nxe-Pp-2hj" secondAttribute="bottom" constant="20" id="Cmo-Qa-zYb"/>
                             <constraint firstItem="iVD-uA-iDk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Jvg-lv-sTu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iVD-uA-iDk" secondAttribute="trailing" constant="20" id="RYx-Kj-dYq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ppl-lH-1fJ" secondAttribute="trailing" id="dmj-SY-Hbi"/>
+                            <constraint firstItem="Ppl-lH-1fJ" firstAttribute="top" secondItem="iVD-uA-iDk" secondAttribute="bottom" constant="20" id="klM-VI-MgU"/>
+                            <constraint firstItem="Ppl-lH-1fJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ksG-wD-uHK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nxe-Pp-2hj" secondAttribute="trailing" id="v3l-5W-0UO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ppl-lH-1fJ" secondAttribute="bottom" id="wNp-9A-YVJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ZJS-H0-sfh"/>
@@ -259,6 +267,7 @@
                         <outlet property="expensesAmountLabel" destination="uYW-d0-VuP" id="ray-ce-HpQ"/>
                         <outlet property="incomeAmountLabel" destination="nqL-5I-1tE" id="OOH-HD-c9f"/>
                         <outlet property="listButton" destination="cB6-8J-bL1" id="8vh-LV-Qvh"/>
+                        <outlet property="tableView" destination="Ppl-lH-1fJ" id="Sqk-i5-nUx"/>
                         <outlet property="timelinePickerLabel" destination="7UD-LO-X9b" id="kmC-Uw-A4Y"/>
                         <outlet property="timelinePickerView" destination="iVD-uA-iDk" id="xPd-Nu-zFu"/>
                     </connections>
